# stochastic_modeling

./: .clang-format  .gitignore  CMakeLists.txt  FindCbc.cmake  benders.cpp  benders.h  class.uml  coin_util.cpp  coin_util.h  commandetype.h  const.h  csv.cpp  csv.h  data.cpp  data.h  dir_separator.h  itineraire.cpp  itineraire.h  livraison.h  lp.cpp  lp.h  main.cpp  probleme.cpp  probleme.h  stochastic.cpp  stochastic.h  test.cpp  test.h  utils.h
data/: delta_volu.csv  livraison_volu_mag.csv  livraison_volu_pfs.csv  route.csv  test.csv
python/: 2021-07-28_14:12:23.txt  2021-07-28_14:18:21.txt  2021-08-04_15:32:01.txt  2021-08-10_11:52:40.txt  2021-08-13_10:13:17.txt  2021-08-13_10:16:20.txt  data.ods  modele_flot.ipynb  no_stock.txt  stock as var.txt  with stock.txt
